Quick spell check

--- a/_posts/2022-06-05-origins.markdown
+++ b/_posts/2022-06-05-origins.markdown
@@ -18,11 +18,11 @@ One of them however stands out from the others, because I played it the most, an
 
 As I got older, there came better games, including flight sims, and of course I played them, but figuring out the complex avionics implemented in [DCS](https://en.wikipedia.org/wiki/Digital_Combat_Simulator) is not something I just have the time for. I had a lot of fun with [F-22 TAW](https://en.wikipedia.org/wiki/F-22_Total_Air_War), but for some reason F-15 II just stuck with me over the years.
 
-Now the other thing that was happenning over the years is that I was learning about programming and the way computers worked in general. Starting back at primary school, I got my feet wet with some simple [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language)) programs, later moved on to C and C++ and ultimately ended up as a professional software dev. At some point, I became drawn to my origins and wanted to understand better how DOS and the [x86](https://en.wikipedia.org/wiki/X86) processors worked under the hood.
+Now the other thing that was happening over the years is that I was learning about programming and the way computers worked in general. Starting back at primary school, I got my feet wet with some simple [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language)) programs, later moved on to C and C++ and ultimately ended up as a professional software dev. At some point, I became drawn to my origins and wanted to understand better how DOS and the [x86](https://en.wikipedia.org/wiki/X86) processors worked under the hood.
 
 I guess it would be inevitable that I would end up applying the knowledge I had gathered to F15, because I recall that in high school, after learning the basics of x86 [assembly](https://en.wikipedia.org/wiki/Assembly_language) programming, I ended up disassembling F15's game binary, printing out the listing on my inkjet printer and poring over it, hoping to glean some insights into how the game worked. I sadly lacked the knowledge back then, but I've been working at it, and I think I'm now in a place where I can undertake a project to [reverse](https://en.wikipedia.org/wiki/Reverse_engineering) it and write a reimplementation in a high-level language, which can later be studied, expanded and improved.
 
-In recent years, some old games' source code was [leaked or released](https://en.wikipedia.org/wiki/List_of_commercial_video_games_with_available_source_code) by the authors, [ScummVM](https://www.scummvm.org/) reimplemented the engines of multiple adventure games, and there have been [too many](https://arstechnica.com/gaming/2020/05/beyond-emulation-the-massive-effort-to-reverse-engineer-n64-source-code/) reversing projects by hobbysts to count. I've enjoyed reading about these, and happy for the progress people are making, but for some reason there just seems to be a dearth of information on the technical side of things. For some reason, people seem to not be eager to share the details, and somebody like me who's interested in how the goal was achieved needs to attempt to grasp the larger picture from piecewise information spread across forum posts and elsewhere.
+In recent years, some old games' source code was [leaked or released](https://en.wikipedia.org/wiki/List_of_commercial_video_games_with_available_source_code) by the authors, [ScummVM](https://www.scummvm.org/) reimplemented the engines of multiple adventure games, and there have been [too many](https://arstechnica.com/gaming/2020/05/beyond-emulation-the-massive-effort-to-reverse-engineer-n64-source-code/) reversing projects by hobbyists to count. I've enjoyed reading about these, and happy for the progress people are making, but for some reason there just seems to be a dearth of information on the technical side of things. For some reason, people seem to not be eager to share the details, and somebody like me who's interested in how the goal was achieved needs to attempt to grasp the larger picture from piecewise information spread across forum posts and elsewhere.
 
 I plan to document my project here for the sake of anybody who might be interested, and to keep tabs on my own progress. I am also opening up this information because I'm looking for collaborators - if you have the knowledge and time, please contact me. Of course, if you happen to be sitting on the F-15 SE II source code, I would be very happy to get my hands on it. ;)
 
