--- a/_posts/2022-12-09-reversing-1.md
+++ b/_posts/2022-12-09-reversing-1.md
@@ -11,7 +11,7 @@ A game is made of assets, like models, textures and world maps, and the code tha
 
 ## Code
 
-The game code is implemented in a programming language of the developer's choice. Back in the time F15 SE2 was made, that language would often be pure assembly for the particular platform the game was developed for (which would prove a hindrance if you wanted to port your game to different platforms). Part of the reason was, the hardware was quite limited in its capabiliies, and to make best use of it, or perhaps even be able to have to your game run with acceptable performance in the first place, you needed to get close to the metal and directly manipulate the hardware on the lowest level - no fancy pre-made engines or libraries were available, you had to roll your own. 
+The game code is implemented in a programming language of the developer's choice. Back in the time F15 SE2 was made, that language would often be pure assembly for the particular platform the game was developed for (which would prove a hindrance if you wanted to port your game to different platforms). Part of the reason was, the hardware was quite limited in its capabilities, and to make best use of it, or perhaps even be able to have to your game run with acceptable performance in the first place, you needed to get close to the metal and directly manipulate the hardware on the lowest level - no fancy pre-made engines or libraries were available, you had to roll your own. 
 
 Slowly, compilers for high level languages like C and Pascal were starting to appear on personal computers, but their capabilities were severely limited compared to the level of optimizations modern compilers are capable of - today your code will be broken up into pieces, reordered, scattered all over the compiled binary in a form beyond recognition. Back in the late 80s, what your wrote in a high level language was translated mostly directly into sequences of machine code, and the code generated often kinda sucked, so that's another reason people chose to go with writing assembly by hand in the first place.
 
@@ -23,7 +23,7 @@ The assets will nowadays usually be produced by some powerhouse commercial softw
 
 It is obviously necessary to understand the formats used by a game when trying to reimplement it, perhaps even more so than understanding the code itself - after all, if you knew how the formats work, you could go about [implementing an alternative implementation](https://fabiensanglard.net/reverse_engineering_strike_commander/), without ever taking a look at the code. You would not have preserved the identical behaviour of the original, but all the content would be there, and it's a matter of what you perceive what your goal was at the beginning, to determine if that's good enough or not. See, I told you this would get philosophical. 
 
-So, reversing based on figuring out the data formats alone is possible, but I don't posess a code breaker mentality, and I have hardly any information on the data to go on, which means that (for me at least), the only real way forward of figuring out how a format like that works, is to infer it from the way the code interacts with the files containing it, and how it uses that data during gameplay.
+So, reversing based on figuring out the data formats alone is possible, but I don't possess a code breaker mentality, and I have hardly any information on the data to go on, which means that (for me at least), the only real way forward of figuring out how a format like that works, is to infer it from the way the code interacts with the files containing it, and how it uses that data during gameplay.
 
 ## Operating system
 
