--- a/_posts/2022-12-09-reversing-2.md
+++ b/_posts/2022-12-09-reversing-2.md
@@ -7,9 +7,9 @@ category: f15-se2
 
 ## Hardware
 
-DOS is running on, and tied to the [Intel x86](https://en.wikipedia.org/wiki/X86) CPU platform. The lowest common denominator for that platform is the [8086](https://en.wikipedia.org/wiki/Intel_8086) CPU, which is a 16bit processor with a limited instruction set with a variable-lenght instruction encoding, limited data bus bandwidth, pitiful performance, and a peculiar [memory addressing scheme](https://en.wikipedia.org/wiki/Real_mode#Addressing_capacity) that uses two 16 bit registers to form a 20 bit address. Understanding the operation of the 8086 CPU, the operation and capabilities of its registers, memory models, segmented addressing, and most importantly its assembly language is the single most important skill necessary in reversing an old game like F15 SE2.
+DOS is running on, and tied to the [Intel x86](https://en.wikipedia.org/wiki/X86) CPU platform. The lowest common denominator for that platform is the [8086](https://en.wikipedia.org/wiki/Intel_8086) CPU, which is a 16bit processor with a limited instruction set with a variable-length instruction encoding, limited data bus bandwidth, pitiful performance, and a peculiar [memory addressing scheme](https://en.wikipedia.org/wiki/Real_mode#Addressing_capacity) that uses two 16 bit registers to form a 20 bit address. Understanding the operation of the 8086 CPU, the operation and capabilities of its registers, memory models, segmented addressing, and most importantly its assembly language is the single most important skill necessary in reversing an old game like F15 SE2.
 
-Later DOS games embraced the features of more advanced Intel CPUs, and many ran in [protected mode](https://en.wikipedia.org/wiki/Breadth-first_search) under an [extender](https://en.wikipedia.org/wiki/DOS_extender) like [DOS/4G](https://en.wikipedia.org/wiki/DOS/4G), which let them access much more memory, use fast 32bit instructions for superior performance, and basically ignore DOS even more than what was considered polite. ;) These games are actually kind of like minature operating systems, and I'm lucky F15 SE2 just uses the lowest common denominator 16-bit 8086 instructions, because I know next to nothing about low-level protected mode programming.
+Later DOS games embraced the features of more advanced Intel CPUs, and many ran in [protected mode](https://en.wikipedia.org/wiki/Breadth-first_search) under an [extender](https://en.wikipedia.org/wiki/DOS_extender) like [DOS/4G](https://en.wikipedia.org/wiki/DOS/4G), which let them access much more memory, use fast 32bit instructions for superior performance, and basically ignore DOS even more than what was considered polite. ;) These games are actually kind of like miniature operating systems, and I'm lucky F15 SE2 just uses the lowest common denominator 16-bit 8086 instructions, because I know next to nothing about low-level protected mode programming.
 
 As a consequence of the 8086's capabilities, memory in real mode is severely limited, you get the famous [640KB](https://en.wikipedia.org/wiki/Conventional_memory#640_KB_barrier) because the CPU can address a little over 1MB of memory, and a sizable chunk of that is occupied by regions that are [memory-mapped](https://en.wikipedia.org/wiki/Memory-mapped_I/O) into hardware, and other areas are claimed by the BIOS [and DOS itself](https://en.wikipedia.org/wiki/DOS_memory_management). In real-world usage, you would typically have some 500KB, give or take, available after loading DOS and some drivers.
 
@@ -23,7 +23,7 @@ __DosBox__: I have a love-hate relationship with it. On the one hand, I need som
 
 __IDA__: Interactive Disassembler has long been the go-to tool for software forensics, and many successful reverse engineering projects have been completed with its aid. It has more features and supports more platforms than I can count, but for working with DOS binaries, the ancient 5.0 version is supposed to be optimal (I think the vendor dropped DOS support in later versions). It is also nice that they provide a [freeware download hosted by the ScummVM project](https://www.scummvm.org/news/20180331/) of that version, since a commercial license of IDA costs something like 5 Million $$$ (or so I'm told). The interface is super crusty and it looks as daunting as the cockpit of a space shuttle, but it sure beats working from raw disassembly text once you get the hang of it. IDA is an "interactive" disassembler, which means you load your binary into it, then it analyzes it and spits out dissassembly that is annotated with details that it was able to discern from the code - function boundaries are discovered if possible, stack frame layout might be discovered, code and data segments are separated and (auto-generated) labels placed on referenced locations. You then go through the disassembly and based on what you learn, you assign meaningful names to functions and data, reorder stuff around (with IDA making sure everything stays consistent) etc. and as you do that, your changes propagate throughout the disassembly, so if you discover what a variable referenced in one place is for in one function and rename it to reflect that fact, it will be visible under that name in all other functions, so you kind of keep filling in the blanks to form the full picture, kind of like solving a crossword puzzle, where letters from some words help you out in figuring out other ones. 
 
-__compiler__: As explained in a different post, F15 SE2 is written in Microsoft C 5.0/5.1, so it's beneficial to use the same compiler for the recreation (althogh not strictly necessary).
+__compiler__: As explained in a different post, F15 SE2 is written in Microsoft C 5.0/5.1, so it's beneficial to use the same compiler for the recreation (although not strictly necessary).
 
 __misc. others__: an unpacker for compressed EXEs, a hex editor, a calculator or a Python prompt for calculating offsets and such, a good code editor and other such nonsense.
 
