--- a/_posts/2023-05-17-compiler.md
+++ b/_posts/2023-05-17-compiler.md
@@ -27,7 +27,7 @@ So it's finally time to get started on the reconstruction. I have obtained a cop
 5. If the instructions don't match, go back to #2 and tweak the code
 6. If the instructions do match, give myself a pat on the back and move onto the next instructions in #1
 
-The process is repeated for all the functions in the binary until everything is covered and matching. The code does not need to be very pretty or even understandable at this point - getting too deep into the details and trying to figure out too much about the actual intent of the code is adding more complexity to an already difficult task. Research and clarification will be easier later when the code is complete and can be instrumented with logging or run under a symbollic debugger. It's a matter of preference, but I think dummy function and variable names (e.g. `unknown_123`) are fine at this stage. Of course, if something is pretty evident even at this stage, I go ahead and name it properly (e.g. `timerInterruptRoutine`). No point in discovering the same thing twice.
+The process is repeated for all the functions in the binary until everything is covered and matching. The code does not need to be very pretty or even understandable at this point - getting too deep into the details and trying to figure out too much about the actual intent of the code is adding more complexity to an already difficult task. Research and clarification will be easier later when the code is complete and can be instrumented with logging or run under a symbolic debugger. It's a matter of preference, but I think dummy function and variable names (e.g. `unknown_123`) are fine at this stage. Of course, if something is pretty evident even at this stage, I go ahead and name it properly (e.g. `timerInterruptRoutine`). No point in discovering the same thing twice.
 
 Besides the main challenge of doing the reconstruction, there are two technical problems with this process. 
 
