--- a/_posts/2023-05-18-compiler2.md
+++ b/_posts/2023-05-18-compiler2.md
@@ -61,7 +61,7 @@ Comparing code between reference (entrypoint 1000:0017/010017) and other (entryp
 1000:00ac/0100ac: call far 0x16b50cac              ~= 1000:00aa/0100aa: call far 0x11c10286
 </pre>
 
-The Turbo C compiler produces mismatches elsewhere in the code. Notably, after calling a function which takes a word-sized argument, it uses two `inc sp` instructions to take the argument off the stack where the original does `add sp,2`. The result is exactly the same, but there is a discrepancy. I have `mzdiff` running with the `--variant` option which I implemented to get around exactly this type of issue - it has a static lookup table of equivalent sequences of instructions and it displays the `~~` status and puts the instructions in a warning color to show that the add is equivalent to the two subequent increments. This happens when building the code with `-G` which enables favouring of fast code over small code - without it, it will emit `pop cx` instead, which also has the same result, but again, it's not the same instruction.
+The Turbo C compiler produces mismatches elsewhere in the code. Notably, after calling a function which takes a word-sized argument, it uses two `inc sp` instructions to take the argument off the stack where the original does `add sp,2`. The result is exactly the same, but there is a discrepancy. I have `mzdiff` running with the `--variant` option which I implemented to get around exactly this type of issue - it has a static lookup table of equivalent sequences of instructions and it displays the `~~` status and puts the instructions in a warning color to show that the add is equivalent to the two subsequent increments. This happens when building the code with `-G` which enables favouring of fast code over small code - without it, it will emit `pop cx` instead, which also has the same result, but again, it's not the same instruction.
 
 Another discrepancy in the above output is that whenever a register needs to be zeroed in order to be pushed onto the stack as an argument, Turbo C emits `xor ax,ax` instead of the desired `sub ax,ax`. Again, same result and the tool obliges us with `~~`, but the instructions are different.
 
@@ -146,6 +146,6 @@ The silver lining is that I stil have a viable path forward. Here are my possibi
 1. I can move ahead with the reconstruction using either a Borland or Microsoft compiler, relying on the tool to skip the differences that are not critical. I can implement more advanced heuristics into the tool as the need arises.
 2. I could force the loop to match with inline assembly of MSC 6.0. Screw backwards compatibility with 1989.
 3. I could potentially try the standalone versions of QuickC from 1.0 up to 2.51, and QuickC for Windows 1.0 which came out in 1991 and could still target DOS, although based on my experience with QC bundled with MSC 5.1, I don't think any of them are likely.
-4. An observant reader might have noticed that in my submarine picture in Part 1 there is Watcom hovering on the horizon. Versions 6.0 and 7.0 of the Watcom C/C++ compiler could emit real-mode 16bit code (the subsequent versions focused on protected mode of the 386), and Watcom was very popular with game developers, although I think it was mostly after the protected mode version was used to create _Doom_. Sadly, I could not find a copy of the 16bit version anywhere. The modern OpenWatcom project is also a possiblity.
+4. An observant reader might have noticed that in my submarine picture in Part 1 there is Watcom hovering on the horizon. Versions 6.0 and 7.0 of the Watcom C/C++ compiler could emit real-mode 16bit code (the subsequent versions focused on protected mode of the 386), and Watcom was very popular with game developers, although I think it was mostly after the protected mode version was used to create _Doom_. Sadly, I could not find a copy of the 16bit version anywhere. The modern OpenWatcom project is also a possibility.
 
 If I ever make a breakthrough on this, there might be a [Part 3]({% post_url 2023-09-02-compiler3 %}) of this post, but for now I'm going with option #1. I have `main()` of `START.EXE` fully reconstructed into "mostly matching" state, and am moving onto other functions, encountering difficulties along the way, but so far being able to overcome them. I'll write up more findings related to those in subsequent posts, but regarding the compiler, that's it for now.  Good fight, good night.
