--- a/_posts/2023-11-08-imatching2.md
+++ b/_posts/2023-11-08-imatching2.md
@@ -191,7 +191,7 @@ I spent 3 days trying to write it out as for/while/do-while, but could not obtai
 } // routine ends here
 {% endhighlight %}
 
-Putting the latter assignment into the loop condition by itself is not something that occured easily, believe me. This is an another example of the intermediate value reuse paradigm as discussed in the first item, although somewhat less extreme.
+Putting the latter assignment into the loop condition by itself is not something that occurred easily, believe me. This is an another example of the intermediate value reuse paradigm as discussed in the first item, although somewhat less extreme.
 
 An another interesting quirk was that the `break` statement inside the loop cannot be a `return` even though it ends up going to the routine return anyway. Doing so elided a `les bx` for the `gameData->difficulty` value - the one from `gameData->theater` was reused since it's the same structure, but the kicker is that the code for the loop and function termination is identical! No idea why it has that effect (an in-line return forcing an evaluation of branch destinations and value propagation along those? It figured out it didn't need to reload it, but normally it wouldn't check?), but it's an another example of "non-orthogonal BS" where later code changes the form of code that comes before it. Huh, I guess they are not that rare after all...
 
@@ -218,7 +218,7 @@ It uses the so-called string instruction `repne movsw` to copy 16 (10h) 2-byte w
 
 An another thing is that technically `repne movsw` is an illegal instruction. The way it works, is there are two so called prefix opcodes for string instructions like `MOVS/CMPS/SCAS/STOS` in the 8086 instruction set which cause those instructions to be executed in a loop, as many times as the number in the `CX` register. The first one is 0xF2 and it represents `REPNE/REPNZ`, the other one is 0xF3 and it represents `REP/REPE/REPZ`. So, technically `REP` is the same thing as `REPE` or `REPZ`, while `REPNE` is the same as `REPNZ`. However, convention dictates that `REP` be paired with `MOVS` (`memcpy()`) and `STOS` (`memset()`), while `REPE/REPZ/REPNE/REPNZ` with `CMPS` (`memcmp()/strcmp()`) and `SCAS` (`strlen()`). The difference between `REPE/REPZ` and `REPNE/REPNZ` is that while both execute the string instruction `CX`-times, the former will terminate when the zero flag `ZF` becomes 1, while the latter will do so when the flag becomes zero. As `CMPS` or `SCAS` are proceeding down the "string", they affect the flags based on the comparisons performed at individual locations, so this is a way to say "proceed until string end or until 0/not 0". Because `MOVS` and `STOS` do not affect flags, it does not (technically) make sense to use `REPNE` on them - it should be `REP MOVSW`, but it works just as well. Whew. This was hard for me to distill, but I could not find a complete explanation online, so there you go.
 
-So, has this been hand-crafted in assembly after all? Not necessarily, as MSC 5.1 is capable of emitting `repne movsw`. Whoa there, didn't I say it does not support inline functions? Well yes I did, but let me introduce you to high tech from 1989: instrinsic functions!
+So, has this been hand-crafted in assembly after all? Not necessarily, as MSC 5.1 is capable of emitting `repne movsw`. Whoa there, didn't I say it does not support inline functions? Well yes I did, but let me introduce you to high tech from 1989: intrinsic functions!
 
 ![intrinsic functions description in the manual](/images/intrinsic.jpg){: .center-image }
 
