--- a/_posts/2023-12-30-unlink.md
+++ b/_posts/2023-12-30-unlink.md
@@ -217,7 +217,7 @@ dseg:0204 dseg            ends
 
 15 routines (and a "chunk" which in IDA speak is a disconnected part of a routine) made it into the executable. The unnamed (`sub_...`) ones are also recognized as part of libc by IDA, they are referenced by the named ones, just lost their names to stripping.
 
-The real meat of this part of the experiment comes from the contents of the data segment. It opens with two null bytes, then a word value that's referenced from `start`, that is the crt0 code. More null bytes follow, then the MSC library watermark which I know from the game, followed by 0x11, 0x0... and my code's data begins. After it ends, more libc data continues. The initialized libc data ends with some error strings, and an apparent termination marker of 3 times 0xff. Following that are 11 (0xb) bytes of unitialized data before the two uninitialized variables of my own, and the data segment concludes.
+The real meat of this part of the experiment comes from the contents of the data segment. It opens with two null bytes, then a word value that's referenced from `start`, that is the crt0 code. More null bytes follow, then the MSC library watermark which I know from the game, followed by 0x11, 0x0... and my code's data begins. After it ends, more libc data continues. The initialized libc data ends with some error strings, and an apparent termination marker of 3 times 0xff. Following that are 11 (0xb) bytes of uninitialized data before the two uninitialized variables of my own, and the data segment concludes.
 
 ## Adding the remaining functions from libc
 
