--- a/_posts/2024-01-07-unlink2.md
+++ b/_posts/2024-01-07-unlink2.md
@@ -5,7 +5,7 @@ category: f15-se2
 ---
 (...continued from  [Part 1]({% post_url 2023-12-30-unlink %}))
 
-If there's anything life has taught me, it's got to be that [submitting a question](https://retrocomputing.stackexchange.com/questions/28248/why-does-my-mz-executables-bss-inflate-by-1-5kb-after-linking-fopen-with-msc) publically is a surefire way of figuring out the answer myself within an hour or so... unless it actually takes a couple months.
+If there's anything life has taught me, it's got to be that [submitting a question](https://retrocomputing.stackexchange.com/questions/28248/why-does-my-mz-executables-bss-inflate-by-1-5kb-after-linking-fopen-with-msc) publicly is a surefire way of figuring out the answer myself within an hour or so... unless it actually takes a couple months.
 
 For context, I am trying to find parts of the game's data segment which can be attributed to linking in the Microsoft C library. In the first part, I figured out initialized data as the easier task, but was left stumped with the layout of the uninitialized (BSS) data section, which contains a little over 1500 bytes of unaccounted-for data:
 
