--- a/_posts/2024-02-28-elephant.md
+++ b/_posts/2024-02-28-elephant.md
@@ -6,11 +6,11 @@ category: f15-se2
 ---
 <small>(_This post is part of a [series]({% link category/f15-se2.html %}) on the subject of my hobby project, which is recreating the C source code for the 1989 game [F-15 Strike Eagle II]({% post_url 2022-06-05-origins %}) by reverse engineering the original binaries._)</small>
 
-Yeah, I know, I kind of suggested (if not exactly promised) in the last post that I would let go of fiddling with the tooling and get back into reconstrucing the source code for the game. But let's stop kidding ourselves; there's an elephant in the room that we need to talk about.
+Yeah, I know, I kind of suggested (if not exactly promised) in the last post that I would let go of fiddling with the tooling and get back into reconstructing the source code for the game. But let's stop kidding ourselves; there's an elephant in the room that we need to talk about.
 
 ![](/images/elephant.webp){: .center-image-narrow }
 
-The pre-release source code for Microprose's 1994 Fleet Defender got [leaked](https://archive.org/details/f-14-src) apparently as far back as the 90s, being passed around on BBSes. I felt kind of silly when I heard about it a few years into my F15SE2 project because I was completely unaware of it. Could it be that I had (most) of the source code available from the very beginning and just didn't know? That would be pretty embarassing. At least I did not go into the main flight game engine in `EGAME.EXE` yet, and if I could match the leaked source code to the game binary routines, it could shave **years** off my reversing efforts.
+The pre-release source code for Microprose's 1994 Fleet Defender got [leaked](https://archive.org/details/f-14-src) apparently as far back as the 90s, being passed around on BBSes. I felt kind of silly when I heard about it a few years into my F15SE2 project because I was completely unaware of it. Could it be that I had (most) of the source code available from the very beginning and just didn't know? That would be pretty embarrassing. At least I did not go into the main flight game engine in `EGAME.EXE` yet, and if I could match the leaked source code to the game binary routines, it could shave **years** off my reversing efforts.
 
 As far as I understand it, based on superficial similarities and information from ex-Microprose employees that were kind enough to talk to me, the late-80s-to-early-90s Microprose MS-DOS flight sim codebase was evolving and being shared between projects as new games were being developed. The origins of this codebase are somewhat murky, but Sid Meier gives some hints in his [book](https://www.goodreads.com/book/show/50489373-sid-meier-s-memoir):
 
@@ -146,7 +146,7 @@ MainGameLoop()
 }
 {% endhighlight %}
 
-This contains the main function of the game and the main game loop itself. What's interesting is that it was apparently adapted from _F-15_, and the fact that Sid is mentioned (who did not work on _F-15 III_) makes me think this was all the way from _F-15 II_. It's not that big a deal because the function is rather simple, just calls into other functions and would be modified for _Fleet Defender_ anyway, but it's nevertheless cool to look at, and the routine names, structure definitions and other references might be useful. It's iteresting to see it init and load the `mgraphic.exe` video overlay driver, and I also remember setting the `M` mode value for VGA graphics in my code. The source code contains the name of Vaughn Thomas who was a tester at MPS during that time, but I don't think that means he was the source of the leak - some developer probably created this build for Vaughn, gave the binaries to him for testing, and the source code was pilfered sometime at that point. 
+This contains the main function of the game and the main game loop itself. What's interesting is that it was apparently adapted from _F-15_, and the fact that Sid is mentioned (who did not work on _F-15 III_) makes me think this was all the way from _F-15 II_. It's not that big a deal because the function is rather simple, just calls into other functions and would be modified for _Fleet Defender_ anyway, but it's nevertheless cool to look at, and the routine names, structure definitions and other references might be useful. It's interesting to see it init and load the `mgraphic.exe` video overlay driver, and I also remember setting the `M` mode value for VGA graphics in my code. The source code contains the name of Vaughn Thomas who was a tester at MPS during that time, but I don't think that means he was the source of the leak - some developer probably created this build for Vaughn, gave the binaries to him for testing, and the source code was pilfered sometime at that point. 
 
 You can also see the ancient origins of the codebase in the fact that many routines are written in the pre-ANSI K&R style of C, with no return type (which defaulted to `int`), and local variables defined before the opening brace.
 
@@ -166,7 +166,7 @@ You can also see the ancient origins of the codebase in the fact that many routi
 ************************************************************************/
 {% endhighlight %}
 
-This comment is present in `flight2.c` and in `views.c`, although the latter with a later date of 1993. Both are caculation-dense routines seemingly for calculating flight dynamics and 3D view processing, and the fact that it seems they originated from _F-19_ makes me hope I can find traces of this code in _F-15 II_ which would be super helpful.
+This comment is present in `flight2.c` and in `views.c`, although the latter with a later date of 1993. Both are calculation-dense routines seemingly for calculating flight dynamics and 3D view processing, and the fact that it seems they originated from _F-19_ makes me hope I can find traces of this code in _F-15 II_ which would be super helpful.
 
 {% highlight cpp %}
 /*  File:   Planes.c                              */
@@ -246,7 +246,7 @@ The former comment applies to a global symbol used to execute `longjmp()` in `aw
 
 Now, how do we go about figuring out if any of this code is actually present in _F15 II_, and if so, where? Fortunately, I [recently developed]({% post_url 2025-01-30-newtooling2 %}) some tooling for extracting routine signatures from binaries and locating them in other binaries, which I orignally used to see if any work I did for _F-15 II_'s `START.EXE` would carry over to `EGAME.EXE`. This time, I will use it to search for bits of `F14.EXE` in `EGAME.EXE`. I am a bit lucky here. Despite _Fleet Defender_'s relatively late release date of 1994, the game does not appear to use protected mode, or much 32-bit code either (except for a few minor sections in assembly files, still in real mode). It's kind of surprising given that by that was the year _Doom II_ came out, but for better or worse, _Fleet Defender_ seems to run 16bit real mode code. If it had been rewritten to use protected mode, the code would likely be mostly useless to me.
 
-The first thing I need to do then is build the code. There is a DOS-era makefile included in the source tree, but I ended up making my own to have a bit more control over the build process and integrate well with my tooling for wrapping MS C. Incidentally, _Fleet Defender_ seems to have been compiled by MSC 7.0, but I need to build it with MSC 5.1 to have the code matching _F-15 II_ as closely as possible. For that, I had to do a couple tweaks to the code, mostly with large, statically initalized arrays defined within functions that MSC 5.1 did not like, but it was a simple matter of moving them up to global scope. I also had to exclude some C files which used inline assembly which is not supported in MSC 5.1, but there were only a few and they contained a minuscule amount of code.
+The first thing I need to do then is build the code. There is a DOS-era makefile included in the source tree, but I ended up making my own to have a bit more control over the build process and integrate well with my tooling for wrapping MS C. Incidentally, _Fleet Defender_ seems to have been compiled by MSC 7.0, but I need to build it with MSC 5.1 to have the code matching _F-15 II_ as closely as possible. For that, I had to do a couple tweaks to the code, mostly with large, statically initialized arrays defined within functions that MSC 5.1 did not like, but it was a simple matter of moving them up to global scope. I also had to exclude some C files which used inline assembly which is not supported in MSC 5.1, but there were only a few and they contained a minuscule amount of code.
 
 Unfortunately, my tooling cannot (yet) parse object files in the OMF format, only EXEs, so I also need to link it into an executable. Here we come to an unfortunate realization: the code is incomplete. Most of the missing functions are declared in the header `library.h`:
 
@@ -359,7 +359,7 @@ void Draw3dGroundObjects() {}
 
 That, along with the library function stubs got rid of the unresolved symbols. But the linker failed with a "fixup overflow" error in the data segment, meaning the size of the data exceeded 64k, and I'm building the code with the medium memory model (`/AM`), so there's just one data segment. I was probably overly greedy in trying to cram as many of the source files into the exe as possible, and I could remove some, but I actually ended up using the `/NOD[EFAULTLIB]` linker option to avoid linking in the standard C library and its associated data, because I don't actually need the resulting executable to be runnable. Doing that, however meant that I also had to stub out a bunch of libc routines to get it to link, but finally link it did, and I had my coveted `f14.exe`, built with MSC 5.1 with default flags.
 
-The fact that the executable doesn't run or have libc, poses a different problem. Because there's no `START` from crt0, the entrypoint for the exectuable is fixed at `0:0`. I need to walk the code with my `mzmap` tool to figure out where the routines begin and end, so I can extract their signatures for comparison with F15SE2, but if the main entrypoint is broken and control doesn't really go anywhere, the walker will fail.
+The fact that the executable doesn't run or have libc, poses a different problem. Because there's no `START` from crt0, the entrypoint for the executable is fixed at `0:0`. I need to walk the code with my `mzmap` tool to figure out where the routines begin and end, so I can extract their signatures for comparison with F15SE2, but if the main entrypoint is broken and control doesn't really go anywhere, the walker will fail.
 
 However, I **do** know where the routines are located, because the linker output a `.MAP` file when it created `f14.exe`, and the map file lists all public routines along with their entrypoint addresses. I implemented a new option to `mzmap`; `--linkmap` lets it ingest the linker map file as a set of "hints" for routine entrypoints, segment locations and data references as well. That adds a useful feature to `mzmap`, and while walking `f14.exe`, I found and fixed a bunch of pretty serious bugs in the walker, so I'm pretty happy that I took the effort to do so. At the end, I had a map file compatible with my tooling, with most of the `f14.exe` routine boundaries discovered.
 
