--- a/_posts/2024-06-10-imatching3.md
+++ b/_posts/2024-06-10-imatching3.md
@@ -203,7 +203,7 @@ int processPilotInput() {
         [...]
 {% endhighlight %}
 
-The weird layout of the subsequent switch sections matched the original perfectly by itself. It placed a sequence of comparisons at the beginning, and the actual code from the cases later, and the order of the comparisons seems to be dicated by the numerical value of the case, not the order they are put in the code - but it *does* influence the order that the handling code is laid out. The usage of the comma operator is bugging me a little bit as it's not used often and there are simpler ways of spelling out the required control flow, but it will have to stay that way for now. Maybe somebody was trying to be clever, or they needed to add an extra step to the loop in a hurry and couldn't be bothered to add braces - who knows.
+The weird layout of the subsequent switch sections matched the original perfectly by itself. It placed a sequence of comparisons at the beginning, and the actual code from the cases later, and the order of the comparisons seems to be dictated by the numerical value of the case, not the order they are put in the code - but it *does* influence the order that the handling code is laid out. The usage of the comma operator is bugging me a little bit as it's not used often and there are simpler ways of spelling out the required control flow, but it will have to stay that way for now. Maybe somebody was trying to be clever, or they needed to add an extra step to the loop in a hurry and couldn't be bothered to add braces - who knows.
 
 I wanted my win quickly, but the compiler didn't want to cooperate with this sequence of initializing members of a struct var at `0x1fbc`:
 
@@ -426,7 +426,7 @@ Overall, it's a mess which I have untangled once and promptly forgotten. Ultimat
         }
 {% endhighlight %}
 
-The compiler appears to have synthesized the repeated expressions (the `pilot->field[0]`, `pilot->field[var_10]` assignments and the `clearRect()...actualDrawString()` sequence) into one code block between `0x23eb` and `0x243b`, and it's jumping into various points inside it from the different cases in the switch to account for the differences between the cases. Outwardly, it has the appearance of an inner loop, but it's just code deduplication. So the lesson here is, for optimized code, if something crazy is happenning like one branch jumping into the middle of another, it might be possible (or even necessary) to avoid a goto and reduplicate the deduplicated code to get a match.
+The compiler appears to have synthesized the repeated expressions (the `pilot->field[0]`, `pilot->field[var_10]` assignments and the `clearRect()...actualDrawString()` sequence) into one code block between `0x23eb` and `0x243b`, and it's jumping into various points inside it from the different cases in the switch to account for the differences between the cases. Outwardly, it has the appearance of an inner loop, but it's just code deduplication. So the lesson here is, for optimized code, if something crazy is happening like one branch jumping into the middle of another, it might be possible (or even necessary) to avoid a goto and reduplicate the deduplicated code to get a match.
 
 The other lesson is that reconstructing optimized code from this compiler is possible, if not always straightforward. I'm grateful that big chunks of the scenario disk version of the game have been built in debug mode with `/Zi` (definitely the monstrous [0x4093 routine]({% post_url 2024-05-05-ghidra %}), I would have been screwed or at least considerably set back if that was optimized), which let me get off the ground and make progress initially. I'm a more seasoned reverse engineer now, which makes me believe I can take on the optimized routines when they inevitably come - probably until the next one, which is when the impostor syndrome will kick in again. 😉
 
