--- a/_posts/2024-06-21-nowwhat.md
+++ b/_posts/2024-06-21-nowwhat.md
@@ -57,7 +57,7 @@ Because this tool walks the IDA listing, it has (at least initially) a more comp
 
 Next, it takes the remaining routines (all of them minus the ignored ones), sums up their extents from the `proc` keyword up to the `endp`, and that is our baseline 100% completion. Chunks, i.e. detached bits of code that belong to a routine but lay outside its primary extents are not covered, so again, this is not perfect but doesn't need to be. Then it goes over the list of items in the extract list, which are address ranges marked for snipping out of the listing in the JSON configuration file, presumably because they are/will be replaced with C code, and that counts as the "ported" amount. The remainder is obvious, these are the routines which have not been ported yet, for whatever reason (more on that in a minute).
 
-Makes sense so far? The percentages are only rough because it depends where your baseline is, and this tool sets that at the cutoff level of the ignored routines, with the disctinction being kinda flaky especially around chunks. In any case, I seem to have about 70% of the relevant code reconstructed into C at this point, now let's try to come up with some more exact numbers.
+Makes sense so far? The percentages are only rough because it depends where your baseline is, and this tool sets that at the cutoff level of the ignored routines, with the distinction being kinda flaky especially around chunks. In any case, I seem to have about 70% of the relevant code reconstructed into C at this point, now let's try to come up with some more exact numbers.
 
 # Completion according to mzdiff
 
