--- a/_posts/2025-07-04-egame10.md
+++ b/_posts/2025-07-04-egame10.md
@@ -235,7 +235,7 @@ loc_1D770:
 ; ...
 {% endhighlight %}
 
-This is a long series of checks of ax against seemingly arbitrary values which was orignally probably a `switch` statement, but I realized these were key [scan codes](https://stanislavs.org/helppc/scan_codes.html). This is the routine for dispatching keypresses! This is immensely helpful, because I know what the keys do in the game, so I can infer (even if broadly) the purpose of the routines that are invoked by the cases. I did some initial poking around and found a bunch of interesting avenues for further research. As it is with IDA, figuring out one bit in one place will sometimes unlock whole other areas for you, and you keep on doing that until you're done.
+This is a long series of checks of ax against seemingly arbitrary values which was originally probably a `switch` statement, but I realized these were key [scan codes](https://stanislavs.org/helppc/scan_codes.html). This is the routine for dispatching keypresses! This is immensely helpful, because I know what the keys do in the game, so I can infer (even if broadly) the purpose of the routines that are invoked by the cases. I did some initial poking around and found a bunch of interesting avenues for further research. As it is with IDA, figuring out one bit in one place will sometimes unlock whole other areas for you, and you keep on doing that until you're done.
 
 ## Fat routines
 
